# dynamatic

docs/Tutorials/Introduction/: ModifyingDynamatic.md
docs/fpga24/: ModifyingDynamatic.md  UsingDynamatic.md
experimental/lib/Support/: StdProfiler.cpp
include/dynamatic/Conversion/: AffineToScf.h  HandshakeToNetlist.h  PassDetails.h  ScfToCf.h  StandardToHandshakeFPGA18.h
include/dynamatic/Support/: CFG.h  DOTPrinter.h  Dynamatic.h  Handshake.h  LogicBB.h  MILP.h  TimingModels.h
include/dynamatic/Transforms/: ArithReduceStrength.h  BackAnnotate.h  FlattenMemRefRowMajor.h  ForceMemoryInterface.h  HandshakeCanonicalize.h  HandshakeConcretizeIndexType.h  HandshakeInferBasicBlocks.h  HandshakeMaterialize.h  HandshakeMinimizeCstWidth.h  HandshakeMuxToMerge.h  HandshakeOptimizeBitwidths.h  HandshakePrepareForLegacy.h  MarkMemoryDependencies.h  MarkMemoryInterfaces.h  OperationNames.h  PassDetails.h  Passes.h  Passes.td  PushConstants.h  RemovePolygeistAttributes.h  ScfRotateForLoops.h  ScfSimpleIfToSelect.h
lib/Conversion/AffineToScf/: AffineToScf.cpp
lib/Conversion/HandshakeToNetlist/: HandshakeToNetlist.cpp
lib/Conversion/StandardToHandshakeFPGA18/: StandardToHandshakeFPGA18.cpp
lib/Support/: CFG.cpp  DOTPrinter.cpp  Handshake.cpp  LogicBB.cpp
lib/Transforms/: CMakeLists.txt  HandshakeMinimizeLSQUsage.cpp  HandshakeMuxToMerge.cpp
lib/Transforms/BufferPlacement/: BufferPlacementMILP.cpp  CFDFC.cpp  CMakeLists.txt  FPGA20Buffers.cpp  (+3 more)
tools/: CMakeLists.txt
tools/export-dot-cfdfc/: CMakeLists.txt  export-dot-cfdfc.cpp
visual-dataflow/: CMakeLists.txt
(+12 files in other folders)
